[package]
name = "first_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc"
csv = "1.3.0"
flate2 = "1.0.28"
rayon = "1.8.0"
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
arrow = { version = "49.0", default-features = false, features = ["csv", "ffi"] }
arrow-schema = "49.0"
delegate = "0.12" 

[build-dependencies]
tonic-build = "0.10"